test/tests/stages/18_structures/invalid_parse/struct_decl_empty_member_list.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  struct
  identifier(s)
  {
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
